// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel basic 1`] = `
<DocumentFragment>
  .c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c13 *[stroke*="#"],
.c13 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*="#"],
.c13 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c14 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 6px;
}

.c2 {
  position: relative;
}

.c3 {
  position: relative;
  display: block;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

.c15 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: block;
  -webkit-animation: none;
  animation: none;
}

.c16 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: none;
  -webkit-animation: none;
  animation: none;
}

.c5 {
  position: absolute;
  z-index: 1;
  left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  position: absolute;
  z-index: 1;
  right: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  position: absolute;
  z-index: 1;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus > circle,
.c6:focus > ellipse,
.c6:focus > line,
.c6:focus > path,
.c6:focus > polygon,
.c6:focus > polyline,
.c6:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) > circle,
.c6:focus:not(:focus-visible) > ellipse,
.c6:focus:not(:focus-visible) > line,
.c6:focus:not(:focus-visible) > path,
.c6:focus:not(:focus-visible) > polygon,
.c6:focus:not(:focus-visible) > polyline,
.c6:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c9:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus > circle,
.c9:focus > ellipse,
.c9:focus > line,
.c9:focus > path,
.c9:focus > polygon,
.c9:focus > polyline,
.c9:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) > circle,
.c9:focus:not(:focus-visible) > ellipse,
.c9:focus:not(:focus-visible) > line,
.c9:focus:not(:focus-visible) > path,
.c9:focus:not(:focus-visible) > polygon,
.c9:focus:not(:focus-visible) > polyline,
.c9:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
}

.c12:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus > circle,
.c12:focus > ellipse,
.c12:focus > line,
.c12:focus > path,
.c12:focus > polygon,
.c12:focus > polyline,
.c12:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c12:focus::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) > circle,
.c12:focus:not(:focus-visible) > ellipse,
.c12:focus:not(:focus-visible) > line,
.c12:focus:not(:focus-visible) > path,
.c12:focus:not(:focus-visible) > polygon,
.c12:focus:not(:focus-visible) > polyline,
.c12:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    width: 3px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c1 c3"
      >
        <div
          class="c4 c5"
        >
          <button
            aria-label="Go to slide 0"
            class="c6"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Previous"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 2 7 12l10 10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c4 c8"
        >
          <button
            aria-label="Go to slide 2"
            class="c9"
            type="button"
          >
            <svg
              aria-label="Next"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m7 2 10 10L7 22"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c10 c11"
        >
          <button
            aria-label="Jump to slide 1"
            class="c12"
            type="button"
          >
            <svg
              aria-label="Subtract"
              class="c13"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <div
            class="c14"
          />
          <button
            aria-label="Jump to slide 2"
            class="c12"
            type="button"
          >
            <svg
              aria-label="Subtract"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c15"
        >
          <div>
            Slide One
          </div>
        </div>
        <div
          class="c16"
        >
          <div>
            Slide Two
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Carousel controlled component 1`] = `
<DocumentFragment>
  .c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c2 {
  position: relative;
}

.c3 {
  position: relative;
  display: block;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

.c10 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: block;
  -webkit-animation: iqtfUG 0.6s ease-in-out;
  animation: iqtfUG 0.6s ease-in-out;
}

.c11 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: block;
  -webkit-animation: fDGZkn 0.6s ease-in-out;
  animation: fDGZkn 0.6s ease-in-out;
}

.c5 {
  position: absolute;
  z-index: 1;
  left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  position: absolute;
  z-index: 1;
  right: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  height: 100%;
  line-height: 0;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus > circle,
.c9:focus > ellipse,
.c9:focus > line,
.c9:focus > path,
.c9:focus > polygon,
.c9:focus > polyline,
.c9:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) > circle,
.c9:focus:not(:focus-visible) > ellipse,
.c9:focus:not(:focus-visible) > line,
.c9:focus:not(:focus-visible) > path,
.c9:focus:not(:focus-visible) > polygon,
.c9:focus:not(:focus-visible) > polyline,
.c9:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c6:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus > circle,
.c6:focus > ellipse,
.c6:focus > line,
.c6:focus > path,
.c6:focus > polygon,
.c6:focus > polyline,
.c6:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) > circle,
.c6:focus:not(:focus-visible) > ellipse,
.c6:focus:not(:focus-visible) > line,
.c6:focus:not(:focus-visible) > path,
.c6:focus:not(:focus-visible) > polygon,
.c6:focus:not(:focus-visible) > polyline,
.c6:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c1 c3"
      >
        <div
          class="c4 c5"
        >
          <button
            aria-label="Go to slide 1"
            class="c6"
            type="button"
          >
            <svg
              aria-label="Previous"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="M17 2 7 12l10 10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c4 c8"
        >
          <button
            aria-label="Go to slide 3"
            class="c9"
            disabled=""
            type="button"
          >
            <svg
              aria-label="Next"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m7 2 10 10L7 22"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="c10"
        >
          <div>
            Slide One
          </div>
        </div>
        <div
          class="c11"
        >
          <div>
            Slide Two
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
